# SOFE3770

./: .gitignore  README.md
Assignment1/: CMakeLists.txt  README.md  geometry.cpp  geometry.hpp  main.cpp  plot_lines.py  tests.cpp
Assignment1-V2-With-CGAL/: CMakeLists.txt  README.md  geometry.cpp  geometry.hpp  main.cpp  tests.cpp
Assignment2/: ConvexHull.hpp  Plot.cpp  tests.cpp
ParetoEfficiency/: CMakeLists.txt  ConvexHull.cpp  Pareto.cpp  Pareto.hpp  Plot.cpp  Plot.hpp  README.md  main.cpp  plot_lines.py  tests.cpp
ParetoEfficiencyA2/: CMakeLists.txt
ParetoEfficiencyA2/ParetoEfficiency/: ParetoEfficiency.sln
ParetoEfficiencyA2/ParetoEfficiency/Debug/: ParetoEfficiency.ilk
ParetoEfficiencyA2/ParetoEfficiency/ParetoEfficiency/: Pareto.cpp  Pareto.hpp  ParetoEfficiency.cpp  ParetoEfficiency.vcxproj  ParetoEfficiency.vcxproj.filters
ParetoEfficiencyA2/ParetoEfficiency/ParetoEfficiency/Debug/: ParetoEfficiency.pch  vc141.idb
ParetoEfficiencyA2/ParetoEfficiency/ParetoEfficiency/Debug/ParetoEfficiency.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ParetoEfficiency.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
