CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (Assignment1)

SET (CMAKE_CXX_STANDARD 11)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/plot_lines.py
  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/plot_lines.py
  DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE("-- Copied python script for plotting")

ADD_LIBRARY(geometry geometry.cpp)

ADD_EXECUTABLE(main main.cpp)
ADD_EXECUTABLE(tests tests.cpp)

TARGET_LINK_LIBRARIES (main geometry)
TARGET_LINK_LIBRARIES (tests geometry)
